# dog-ate-loaf

./: CMakeLists.txt
include/: PrimeAssistant.h  Rational.h  division_by_zero_exception.h
include/factorutil/: FactorUtil.h
include/matrix/: Matrix.h  SquareMatrix.h  matrix_exceptions.h
include/numericalmethods/: NumericalMethods.h
include/other/: PrimeAssistant.h  Rational.h
include/polynomial/: Polynomial.h
include/rational/: Rational.h  division_by_zero_exception.h
include/vector/: AbstractVector.h
src/: CMakeLists.txt  PrimeAssistant.cpp  Rational.cpp  is-prime-number.cpp
src/factorutil/: FactorUtil.cpp
src/matrix/: Matrix.cpp  SquareMatrix.cpp
src/numericalmethods/: NumericalMethods.cpp
src/other/: CMakeLists.txt  PrimeAssistant.cpp  Rational.cpp
src/polynomial/: Polynomial.cpp
src/rational/: Rational.cpp
src/vector/: AbstractVector.cpp
test/: CMakeLists.txt
test/testFactorUtil/: CMakeLists.txt  main.cpp  testFactorUtil.cpp  testFactorUtil.h
test/testMatrix/: CMakeLists.txt  testMatrix.cpp  testMatrix.h
test/testPrimeAssistant/: CMakeLists.txt  testPrimeAssistant.cpp  testPrimeAssistant.h
test/testRational/: CMakeLists.txt  testRational.cpp  testRational.h
