cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 11)
project (math-building-blocks)
set(CMAKE_BUILD_TYPE Release) 
include_directories(include include/rational include/factorutil include/matrix)
add_subdirectory(src)
add_subdirectory(test)
enable_testing()
add_test(NAME RationalTest COMMAND testRational)
add_test(NAME FactorUtilTest COMMAND testFactorUtil)
