cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
project (math-building-blocks)
set(CMAKE_BUILD_TYPE Release) 
include_directories(include include/rational include/factorutil include/matrix include/numericalmethods include/polynomial)
add_subdirectory(src)
add_subdirectory(test)
enable_testing()
add_test(NAME RationalTest COMMAND testRational)
add_test(NAME FactorUtilTest COMMAND testFactorUtil)
add_test(NAME MatrixTest COMMAND testMatrix)
